@@ -1,5 +1,7 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: splint: annotate argvAppend differently.
+    - jbj: hdrfmt: return failure if PACKAGE{ORIGIN,DIGEST} do not exist.
     - afb: standalone: file "magic" was installed in wrong directory
     - afb: fix VPATH builds finding rpmversion.h (in perl, with MakeMaker)
     - afb: fix VPATH builds finding rpmversion.h (in python)
